# mets-to-edm

./: .gitlab-ci.yml  .gitmodules  README.md  pyproject.toml
.devcontainer/: .gitignore  Dockerfile  compose.yml  devcontainer.json
.github/workflows/: publish-to-pypi.yml
examples/1_customized_mapping_iiif_image_api/: __main__.py  customized_mapping.py  example-1-output.xml  example-1.xml
mets_to_edm/: __init__.py  __main__.py  mapper.py  utilities.py
