[tool.poetry]
name = "mets-to-edm"
# handled via git tags:
version = "0.0.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "mets_to_edm"}]

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.2.2"
edmlib = { version = "^2.2.0", source = "edmlib" }
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.8.0"

[[tool.poetry.source]]
name = "edmlib"
url = "https://git.kpool.at/api/v4/projects/359/packages/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>[0-9]+[.][0-9]+[.][0-9]+)$"
