[tool.poetry]
name = "mets-to-edm"
# handled via git tags:
version = "0.0.0"
description = "Modular mapping of METS/MODS data to EDM (Europeana Data Model), providing comprehensive transformation of METS/MODS XML structures into Pydantic-based EDM classes and properties."
authors = ["Kulturpool <info@kulturpool.at>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "./mets_to_edm" }]

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.2.2"
edmlib = "^2.5.2"
requests = "^2.32.3"
types-lxml = "^2025.8.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>[0-9]+[.][0-9]+[.][0-9]+)$"
